--- a/credentials.yml
+++ b/credentials.yml
@@ -13,8 +13,8 @@ rest:
 #  page-access-token: "<your page access token>"
 
 slack:
-  slack_token: "xoxb-882006860835-893490007909-5HzOIvrBX5CDGgSx5zLk7YMO"
-  slack_channel: "#my_restaurant_bot_ag"
+  slack_token: ""
+  slack_channel: ""
 
 #socketio:
 #  user_message_evt: <event name for user message>
